--- a/yoloWorld_detectSeg_frontend/package.json
+++ b/yoloWorld_detectSeg_frontend/package.json
@@ -25,10 +25,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "ant-design-vue": "^3.2.20",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "element-plus": "^2.3.0",
+    "fabric": "^5.3.0",
     "js-cookie": "^3.0.1",
+    "json-editor-vue3": "^1.1.1",
     "lodash-es": "^4.17.21",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
