--- a/yoloWorld_detectSeg_backend/work_flow/configs/unidet/Unified_learned_OCIM_RS200_6x+2x.yaml
+++ b/yoloWorld_detectSeg_backend/work_flow/configs/unidet/Unified_learned_OCIM_RS200_6x+2x.yaml
@@ -38,7 +38,7 @@ MULTI_DATASET:
   NUM_CLASSES: [365, 80, 500, 37]
   DATA_RATIO: [1, 1, 1, 1]
   USE_CAS: [True, False, True, False]
-  UNIFIED_LABEL_FILE: 'F:\Github\DetectSegPlatform\yoloWorld_detectSeg_backend\work_flow\configs\unidet\learned_mAP+M.json'
+  UNIFIED_LABEL_FILE: 'work_flow\configs\unidet\learned_mAP+M.json'
 SOLVER:
   IMS_PER_BATCH: 16
   STEPS: (480000, 500000)
