--- a/yoloWorld_detectSeg_frontend/package.json
+++ b/yoloWorld_detectSeg_frontend/package.json
@@ -28,7 +28,6 @@
     "ant-design-vue": "^3.2.20",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
-    "echarts": "^5.5.1",
     "element-plus": "^2.3.0",
     "fabric": "^5.3.0",
     "js-cookie": "^3.0.1",
@@ -41,12 +40,11 @@
     "pinia": "^2.0.33",
     "screenfull": "^6.0.2",
     "vue": "^3.2.47",
-    "vue-ele-gallery": "^2.1.7",
-    "vue-gallery": "^2.0.5",
     "vue-router": "^4.1.6",
     "vxe-table": "^4.3.10",
     "vxe-table-plugin-element": "^3.0.6",
-    "xe-utils": "^3.5.7"
+    "xe-utils": "^3.5.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
