--- a/yoloWorld_detectSeg_frontend/package.json
+++ b/yoloWorld_detectSeg_frontend/package.json
@@ -25,9 +25,11 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "ag-grid-vue3": "^32.3.3",
     "ant-design-vue": "^3.2.20",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "echarts": "^5.5.1",
     "element-plus": "^2.3.0",
     "fabric": "^5.3.0",
     "js-cookie": "^3.0.1",
